[gd_scene load_steps=5 format=3 uid="uid://blilmjdoukblb"]

[ext_resource type="Script" path="res://SUBTE/SUBTE.gd" id="1_y5a8x"]
[ext_resource type="PackedScene" uid="uid://x3asnl7st6wl" path="res://Assets/3d/subte/CABINA/subte_cabina.tscn" id="1_yjmqx"]
[ext_resource type="PackedScene" uid="uid://1fx2bwume7l1" path="res://Assets/3d/subte/VAGON_1.tscn" id="2_ufhsf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6w6rw"]
size = Vector3(3.19031, 4.93408, 85.0492)

[node name="Subte" type="Node3D"]
script = ExtResource("1_y5a8x")

[node name="subte_CABINA" parent="." instance=ExtResource("1_yjmqx")]

[node name="subte_CABINA2" parent="." instance=ExtResource("1_yjmqx")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 90.2807)

[node name="vagones" parent="." instance=ExtResource("2_ufhsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.12284)

[node name="vagones2" parent="." instance=ExtResource("2_ufhsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 27.1057)

[node name="vagones3" parent="." instance=ExtResource("2_ufhsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 45.127)

[node name="vagones4" parent="." instance=ExtResource("2_ufhsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 63.1099)

[node name="vagones5" parent="." instance=ExtResource("2_ufhsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 81.114)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0728149, 1.96704, 43.9069)
shape = SubResource("BoxShape3D_6w6rw")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
